Adding option to update location and add device info
